<resources>
    <string name="app_name">Twitter Drift</string>
    <string name="back">Back</string>
    <string name="select_theme">Select theme</string>
    <string name="light">Light</string>
    <string name="twitterdrift">TwitterDrift</string>
    <string name="dark">Dark</string>
    <string name="apply">Apply</string>
    <string name="grant">Grant</string>
    <string name="restart">Restart</string>
    <string name="gotIt">Got it</string>
    <string name="exit">Exit</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="location">Please give us permission to access your location</string>
    <string name="location_enable">Please enable your location/GPS on your phone</string>
    <string name="understand">I Understand</string>
    <string name="settings">Settings</string>
    <string name="explain_gps_fail">Failed to get Location</string>
    <string name="explain_gps_fail_body">We are sorry we could not get your location currently, please restart the app to try again!</string>
    <string name="explain_ping">Thanks for waiting!</string>
    <string name="explain_ping_body">You can now turn off location/GPS sensor and even revoke Location permission if you want. Enjoy the App.</string>
    <string name="explain_perm">Permission Required</string>
    <string name="explain_perm_body">Please give us permission to use your GPS sensor, this is required for the app to function properly.</string>
    <string name="explain_toggle">GPS not enabled</string>
    <string name="explain_toggle_body">Please enable your GPS/Location to help us determine your location, You can turn it off once we are done.</string>
    <string name="explain_gps">App requires GPS data</string>
    <string name="explain_gps_body">We require your one time GPS location to better serve you trends based on your area, You can disable it once we are done.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customText">Get the 𝗕𝗔𝗥𝗖̧𝗔 𝗔𝗣𝗣 for live stats and minute-by-minute updates of today</string>
</resources>